buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply from: "$rootDir/gradle/integration-test.gradle"
    apply from: "$rootDir/gradle/reporting.gradle"

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    compileJava {
        options.encoding = 'UTF-8'
    }

    compileTestJava {
        options.encoding = 'UTF-8'
    }

    compileIntegTestJava {
        options.encoding = 'UTF-8'
    }

    javadoc {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenLocal()
        jcenter()
        maven {
            url 'https://repo.gradle.org/gradle/libs-releases-local/'
        }
    }

    group 'fr.chaffotm.game.geo'
    version '0.1-SNAPSHOT'

    ext {
        beanValidationVersion = '2.0.1.Final'
        jaxbApiVersion = '2.3.1'
        jaxbImplVersion = '2.3.2'
        hibernateJpaVersion = '1.0.0.Final'
        hibernateEntityManagerVersion = '5.3.9.Final'
    }

    dependencies {
        implementation 'com.h2database:h2:1.4.199'

        testImplementation 'junit:junit:4.12'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.2'
        testImplementation 'org.assertj:assertj-core:3.12.2'
        testImplementation 'org.mockito:mockito-core:2.27.0'

        integTestImplementation 'junit:junit:4.12'
        integTestRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.2'
        integTestImplementation 'org.assertj:assertj-core:3.12.2'
    }

    test {
        useJUnitPlatform()
        exclude '**/*Tests.class'
        beforeTest { descriptor ->
            logger.lifecycle("Running " + descriptor)
        }
    }
    test.outputs.upToDateWhen { false }

    integrationTest {
        useJUnitPlatform()
        exclude '**/*Tests.class'
        beforeTest { descriptor ->
            logger.lifecycle("Running " + descriptor)
        }
    }
    integrationTest.outputs.upToDateWhen { false }
}

wrapper {
    gradleVersion = '5.3.1'
}
